# echo-bird

./: .gitignore  CLAUDE.md  Dockerfile.postgres  README.md  Taskfile.yml  biome.json  create-worktree.sh  docker-compose.yml  mise.toml  nx.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.cursor/rules/: basic.mdc
apps/client/: .cta.json  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js  vite.config.ts
apps/client-e2e/: package.json  playwright.config.ts
apps/client/src/: main.tsx  routeTree.gen.ts
apps/client/src/__tests__/: utils.test.ts
apps/client/src/app/: app.spec.tsx  app.tsx  nx-welcome.tsx
apps/client/src/components/: AuthLayout.tsx  (+10 more)
apps/server/: .dockerignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
apps/server/app/: api.py  constants.py  database.py  main.py
apps/server/app/migrations/models/: 0_20250613162944_init.py  0_20250614165307_init.py  0_20250615165142_init.py  1_20250101000000_add_timeline_model.py  1_20250613204827_remove_user_email.py  2_20250613214656_None.py  3_20250613224209_None.py
apps/server/app/models/: TwitterAccount.py  User.py  __init__.py  bookmarked_tweet.py  media.py  read_tweet.py  target_account.py  timeline.py  tweet.py  twitter_account.py  user.py
apps/server/app/routers/: TwitterRouter.py  UsersRouter.py  __init__.py  auth.py  media.py  target_accounts.py  timelines.py  tweets.py  twitter_auth.py  users.py
apps/server/app/services/: tweet_scheduler.py
apps/server/app/utils/: TwitterGraphQLAPI.py  auth.py  encryption.py  media_downloader.py  s3_client.py  session_manager.py  twitter_auth.py  twitter_service.py
apps/server/scripts/: init_db.py
apps/server/src/: api.py  database.py  main.py  models.py
apps/server/tests/: test_main.py
db/init/: 01_init.sql
docs/: specification.md
mongo-init/: init.js
(+49 files in other folders)
